fix after and index text alignment

--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ body {
 
 .track {
   position: relative;
-  overflow: hidden;
   height: calc(var(--scale)*70px);
   border-radius: calc(var(--scale)*5px);
   margin: calc(var(--scale)*15px);
@@ -70,7 +69,7 @@ body {
 }
 
 #large-album-art-container {
-  z-index: -1;
+  z-index: -2;
   background: rgba(0, 0, 0, 0.8);
   position: fixed;
   top: 0;
@@ -130,12 +129,13 @@ body {
 }
 
 .index {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Helvetica, sans-serif;
   font-size: calc(var(--scale)*25px);
   font-weight: bold;
+  line-height: calc(var(--scale)*35px);
   position: absolute;
   left: calc(var(--scale)*65px);
-  top: calc(var(--scale)*5px);
+  top: calc(var(--scale)*1px);
   color: rgb(120, 120, 120);
 }
 
@@ -146,7 +146,7 @@ body {
   line-height: calc(var(--scale)*35px);
   position: absolute;
   left: calc(var(--scale)*130px);
-  top: calc(var(--scale)*3px);
+  top: calc(var(--scale)*1px);
   color: rgb(255, 255, 255);
   white-space: nowrap;
   width: 50%;
